// protos/notify.proto
syntax = "proto3";

package protos;


option go_package = "./"; 

message KafkaRequest {
    string request_id = 1; 
    string service = 2;    
    string action = 3;     
    map<string, string> data = 4; 
}

message KafkaResponse {
    string request_id = 1;  
    string service = 2;     
    string status = 3;      
    string message = 4;     
    map<string, string> data = 5; 
}